environments/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sri-app
  namespace: sri-dev # change to sri-qa / sri-staging / sri-prod
spec:
  replicas: 2 # dev=2 qa=2 staging=2 prod=3
  selector:
    matchLabels:
      app: sri-app
  template:
    metadata:
      labels:
        app: sri-app
    spec:
      containers:
      - name: sri-app
        # This image tag gets updated by the pipeline automatically
        image: 812698982757.dkr.ecr.ap-south-1.amazonaws.com/sri-ecrrepo:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 512Mi
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 30
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
