environments/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sri-app-ingress
  namespace: sri-dev
spec:
  # This fixes the CLASS <none> issue
  ingressClassName: nginx 
  rules:
  - host: dev.sri-app.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sri-app-service
            port:
              number: 80
